--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,15 @@
               "node_modules/ngx-toastr/toastr.css",
               "src/assets/vendor/owl-carousel/owl.carousel.css",
                     "src/assets/css/style.css",
-                    "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
+                    "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+                    "node_modules/slick-carousel/slick/slick.scss",
+  "node_modules/slick-carousel/slick/slick-theme.scss",
+  "node_modules/swiper/swiper-bundle.css"
                 
 
             ],
-            "scripts": [ "node_modules/apexcharts/dist/apexcharts.min.js"]
+            "scripts": [ "node_modules/apexcharts/dist/apexcharts.min.js", "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/slick-carousel/slick/slick.min.js"]
           },
           "configurations": {
             "production": {
