--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-    
   },
   "private": true,
   "dependencies": {
@@ -34,8 +33,11 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.0.0",
     "ngx-owl-carousel-o": "^6.0.0",
+    "ngx-slick-carousel": "^0.6.0",
     "ngx-toastr": "^14.2.2",
     "rxjs": "~6.6.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^7.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
