--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apexcharts": "^3.28.1",
     "bootstrap": "^4.5.0",
     "chart.js": "^3.9.1",
+    "jquery": "^3.6.1",
     "ng-apexcharts": "^1.5.12",
     "ng2-charts": "^3.1.2",
     "ng2-search-filter": "^0.5.1",
